# chicken-messenger

./: .gitignore  Cargo.toml  LICENSE  MAILBOX.md  README.md  TUICLIENT.md
chicken_core/: Cargo.toml
chicken_core/src/: lib.rs
chicken_mailbox/: Cargo.toml
chicken_mailbox/src/: main.rs
chicken_tui_client/: Cargo.toml
chicken_tui_client/src/: main.rs
client/: README.md
cryptography/: Cargo.toml
cryptography/src/: argon2.rs  ciphertext.rs  lib.rs  xchacha20poly1305.rs
database/: Cargo.toml
database/src/: lib.rs
mailbox/: Cargo.toml  README.md  mailbox.json
mailbox/src/: config.rs  crypto_lib.rs  database.rs  main.rs  query_params.rs  responses.rs  sqlite_hdlr.rs
src/: lib.rs
src/mailbox/: MAILBOX.md
tor/: Cargo.toml
tor/src/: lib.rs
