[package]
name = "chicken_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
arti-client = "0.26.0"
bincode = "1.3.3"
env_logger = "0.11.6"
log = "0.4.25"
native-tls = "0.2.13"
serde = "1.0.217"
sled = "0.34.7"
tokio = "1.43.0"
tor-rtcompat = "0.26.0"
chacha20poly1305 = "0.10.1"
