[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["password-hash", "alloc"] }
base64 = "0.22.1"
base64ct = "1.6.0"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
serde = { version = "1.0.217", features = ["derive"] }
